--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <div class="introduction row w-100 text-justify">
     <div class="col w-100">
         <p>I am an undergraduate student at Tsinghua University and major in Computer Science. Currently, I am working as a research assistant at Social AI Group at Carnegie Mellon University, where I am co-advised by Professors <a href="https://haiyizhu.com/">Haiyi Zhu</a> and <a href="https://zstevenwu.com/">Steven Wu</a>. I am also fortunate to be part of  <a href="https://dig.cmu.edu/">CMU DIG lab</a> and advised by Professor <a href="https://perer.org/">Adam Perer</a>.</p>
-<p>My current research interests are Social Computing, Fairness, Accountability, and Transparency, and, more broadly, Human-AI Interaction. Specifically, I am passionate to (i) investigate the interaction between algorithms and humans and (2)  design human-centered systems that reflect the human values and needs of real-world stakeholders.</p>
+<p>My current research interests are Social Computing, Fairness, Accountability, and Transparency, and, more broadly, Human-AI Interaction. Specifically, I am passionate to (1) investigate the interaction between algorithms and humans and (2)  design human-centered systems that reflect the human values and needs of real-world stakeholders.</p>
 
     </div>
 </div>
