Update cv and the year of pubs

--- a/index.html
+++ b/index.html
@@ -304,11 +304,11 @@
                 </span>
 
                 <span class="text-muted publication-date">
-                    2021,
+                    ,
                 </span>
 
                 <span class="text-muted publication-name">
-                    FAccT&#39;22
+                    FAccT
                 </span>
 
             </div>
@@ -378,11 +378,11 @@
                 </span>
 
                 <span class="text-muted publication-date">
-                    2021,
+                    ,
                 </span>
 
                 <span class="text-muted publication-name">
-                    FAccT&#39;22
+                    FAccT
                 </span>
 
             </div>
@@ -463,11 +463,11 @@
                 </span>
 
                 <span class="text-muted publication-date">
-                    2021,
+                    ,
                 </span>
 
                 <span class="text-muted publication-name">
-                    EuroVis&#39;22
+                    EuroVis
                 </span>
 
             </div>
