--- a/projects/privacy-of-reporting.html
+++ b/projects/privacy-of-reporting.html
@@ -22,7 +22,7 @@ h1 {color: #4b2e83;}
 </head>
 
 <body>
-<h1 class="w3-justify">Understanding Privacy Concerns about Reporting on Encrypted Messaing Platforms</h1>
+<h1 class="w3-justify">Understanding Privacy Concerns about Reporting on Encrypted Messaging Platforms</h1>
 <h3 class="w3-justify">Researchers</h3>
 <div class="w3-justify">
 <ul>
@@ -34,28 +34,27 @@ h1 {color: #4b2e83;}
 </ul>
 
 <h3>Purpose of the Study</h3>
-<div>This study aims to understand through interviews how users' privacy concerns might shape their decisions to report harassment and hate speech on encrypted messaging platforms (i.e. WhatsApp, Telegram, Facebook Messengers etc.).</div>
+<div>This study aims to understand through interviews how users' privacy concerns might shape their decisions to report harassment and hate speech on encrypted messaging platforms like WhatsApp, Telegram Secret Chats, Facebook Messengers Secret Conversations etc.</div>
 
 <h3>Study Procedures</h3>
-<div>During the one-hour interview, we will invite participants to consider a series of harassment scenarios and hear their understanding about how reporting works on encrypted messaging platforms as well as their privacy concerns. </div>
+<div>During the one-hour interview, we will ask participants about their experience in using E2EE platforms as well as their privacy expectations and concerns about user reporting on E2EE platforms via a list of hypothetical harassment scenarios</div>
 
 <h3>Benefits</h3>
-<div>You may learn more about reporting on encrpyted messaging platforms.</div>
+<div>You may learn more about reporting on encrypted messaging platforms and get an opportunity to inform the design of future reporting mechanisms with their own testimonies. </div>
 
 <h3>Risks</h3>
-<div>We foresee extremely minimal risks with this study. While harassment examples may include offensive languages, we encourage participants to skip examples that they find disturbing. Additionally, all interviewed participants are anonymous and no identifiable information is collected.</div>
+<div>We foresee extremely minimal risks with this study. While harassment examples may include offensive languages, we encourage participants to skip examples that they find disturbing.<div>
 
 <h3>Protecting Your Information</h3>
-<div>We are collecting no identifiable information about the individual interviewed. We also provide a variety of communication channels including emails, encrypted messsaging platforms or online meeting softwares and participants are welcome to choose the one they prefer.</div>
+<div>The interview can be conducted using a video conferencing tool or audio call, or if participants prefer, it can be conducted over email or a messaging platform of their choice. If participants choose video or audio chats, the interview will be recorded but for internal purposes only. We will also keep your identity anonymous </div>
 
 <h3>Compensation</h3>
-<div>Participants will receive a $20 Amazon gift card.</div>
+<div>If participants are willing to share their email address and name, participants will receive a $20 Amazon gift card.</div>
 
 <h3>Questions and contact</h3>
 If you have questions about this research study, please contact Leijie Wang: leijiew@cs.washington.edu.
 
 <h3>Participate in the Study</h3>
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -76,7 +75,7 @@ If you have questions about this research study, please contact Leijie Wang: lei
 </head>
 <body>
 
-<a href="https://docs.google.com/forms/d/1-pD_CObgUOWsipOtVodwVWMCjCewKUWPUgLFqg5lF5E/viewform?edit_requested=true#settings" class="button">Start Survey</a>
+<a href="https://docs.google.com/forms/d/1-pD_CObgUOWsipOtVodwVWMCjCewKUWPUgLFqg5lF5E/viewform?edit_requested=true#settings" class="button">Start the Recruitment Survey</a>
 
 </body>
 </html>
