Updates reporting project description

--- a/projects/privacy-of-reporting.html
+++ b/projects/privacy-of-reporting.html
@@ -28,31 +28,31 @@ h1 {color: #4b2e83;}
 <ul>
 <li>Leijie Wang. PhD student. Paul G. Allen School of Computer Science & Engineering, University of Washington</li>
 <li>Ruotong Wang. PhD student. Paul G. Allen School of Computer Science & Engineering, University of Washington</li>
-<li>Sterling Williams-Ceci. PhD student. Department of Information Science. Cornell University</li>
-<li>Sanketh Menda. PhD student. Department of Computer Science. Cornell University</li>
+<li>Sterling Williams-Ceci. PhD student. Department of Information Science, Cornell University</li>
+<li>Sanketh Menda. PhD student. Department of Computer Science, Cornell University</li>
 <li>Amy X. Zhang. Assistant Professor. Paul G. Allen School of Computer Science & Engineering, University of Washington</li>
 </ul>
 
 <h3>Purpose of the Study</h3>
-<div>This study aims to understand through interviews how users' privacy concerns might shape their decisions to report harassment and hate speech on encrypted messaging platforms like WhatsApp, Telegram Secret Chats, Facebook Messengers Secret Conversations etc.</div>
+<div>This study aims to understand through interviews how users' privacy concerns might shape their decisions to report unwanted messages on encrypted messaging platforms like WhatsApp,  Secret Chats on Telegram, Secret Conversations on Facebook Messengers, Signal, etc.</div>
 
 <h3>Study Procedures</h3>
-<div>During the one-hour interview, we will ask participants about their experience in using E2EE platforms as well as their privacy expectations and concerns about user reporting on E2EE platforms via a list of hypothetical harassment scenarios</div>
+<div>During the one-hour interview, we will ask participants about their experience in using E2EE platforms as well as their privacy expectations and concerns about user reporting on E2EE platforms via a list of hypothetical harassment scenarios.</div>
 
 <h3>Benefits</h3>
-<div>You may learn more about reporting on encrypted messaging platforms and get an opportunity to inform the design of future reporting mechanisms with their own testimonies. </div>
+<div>You may learn more about reporting on encrypted messaging platforms and get an opportunity to inform the design of future reporting mechanisms with their own testimonies.</div>
 
 <h3>Risks</h3>
-<div>We foresee extremely minimal risks with this study. While harassment examples may include offensive languages, we encourage participants to skip examples that they find disturbing.<div>
+<div>We foresee extremely minimal risks with this study. While harassment scenarios may include offensive languages, we design intricate study procedures to prevent any unnecessary exposure and harms. We also encourage participants to skip any scenario that they find disturbing.<div>
 
 <h3>Protecting Your Information</h3>
-<div>The interview can be conducted using a video conferencing tool or audio call, or if participants prefer, it can be conducted over email or a messaging platform of their choice. If participants choose video or audio chats, the interview will be recorded but for internal purposes only. We will also keep your identity anonymous </div>
+<div>The interview can be conducted using a video conferencing tool or audio call, or if participants prefer, it can be conducted over email or a messaging platform of their choice. If participants choose video or audio chats, the interview will be recorded but for internal purposes only. We will also keep your identity anonymous.</div>
 
 <h3>Compensation</h3>
-<div>If participants are willing to share their email address and name, participants will receive a $20 Amazon gift card.</div>
+<div>If selected participants are willing to share their email address and name, they will receive a $20 Amazon gift card.</div>
 
 <h3>Questions and contact</h3>
-If you have questions about this research study, please contact Leijie Wang: leijiew@cs.washington.edu.
+If you have questions about this research study, please free feel to contact Leijie Wang: <i>leijiew@cs.washington.edu</i>.
 
 <h3>Participate in the Study</h3>
 <!DOCTYPE html>
