add a sentence for collaboration

--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
 
 <div class="introduction row w-100 text-justify">
     <div class="col w-100">
-        <p>I am a second-year CSE Ph.D. student at University of Washington. I&rsquo;m advised by <a href="https://homes.cs.washington.edu/~axz/">Amy X. Zhang</a> and part of the <a href="https://social.cs.washington.edu/">Social Futures Lab</a>. My research interests are at the insersection of social computing and FAccT (Fairness, Accountability, and Transparency). I am passionate about building content moderation systems that respect peoples&rsquo; values. These days, I am particularly interested to empower people to customize algorithms used in every aspect of their online lives through end-user programming methods.</p>
+        <p>I am a second-year CSE Ph.D. student at University of Washington. I&rsquo;m advised by <a href="https://homes.cs.washington.edu/~axz/">Amy X. Zhang</a> and part of the <a href="https://social.cs.washington.edu/">Social Futures Lab</a>. My research interests are at the insersection of social computing and FAccT (Fairness, Accountability, and Transparency). I am passionate about building content moderation systems that respect peoples&rsquo; values. These days, I am particularly interested in empowering people to customize algorithms used in every aspect of their online lives through end-user programming methods.</p>
 <p>In summar 2023, I interned with the AI &amp; Society group at Microsoft Research, where I worked with <a href="https://www.microsoft.com/en-us/research/people/counts/">Scott Counts</a> to understand the challenges knowledge workers face when interacting with generative conversational agents. Before coming to UW, I worked as a research assistant at Social AI Group at Carnegie Mellon University, where I was co-advised by Professors <a href="https://haiyizhu.com/">Haiyi Zhu</a> and <a href="https://zstevenwu.com/">Steven Wu</a>. I was also fortunate to be part of  <a href="https://dig.cmu.edu/">CMU DIG lab</a> and advised by Professor <a href="https://perer.org/">Adam Perer</a>.</p>
+<p>I am always happy to chat about research and collarabote. Feel free to drop me an email :)</p>
 
     </div>
 </div>
@@ -310,7 +311,7 @@
                 
 
                 <span class="main_color publication-name">
-                    arXiv  2023
+                    CHI&#39;24  2023
                 </span>
 
             </div>
@@ -1010,7 +1011,7 @@
 
 
 <footer class="mt-auto d-flex justify-content-center text-muted small secondary_font">
-    <span class="text-muted">Copyright (c) 2023, Leijie Wang,
+    <span class="text-muted">Copyright (c) 2024, Leijie Wang,
         <a class="text-muted" href="https://github.com/hadisinaee/avicenna" target="_blank"> created by Avicenna
             (MIT)</a>
     </span>
