fix a small problem

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 
 
                 <span class="main_color publication-name">
-                    CHI&#39;24  2023
+                    CHI  2024
                 </span>
 
             </div>
