add a new html for privacy reporting

--- a/projects/fair-private-reporting.html
+++ b/projects/fair-private-reporting.html
@@ -1,5 +1,5 @@
 <head>
-<title>Designing a Reporting System That Balances Privacy and Due Process</title>
+<title>Designing a Reporting System that Balances Privacy and Due Process</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -46,12 +46,12 @@ h1 {color: #4b2e83;}
 </div>
 
 <h3>Benefits</h3>
-<div>You may learn more about reporting systems in online communities and get an opportunity to inform the design of future reporting mechanisms with their own testimonies.</div>
+<div>You may learn more about reporting systems in online communities and get an opportunity to inform the design of future reporting mechanisms with your own testimonies.</div>
 
 <h3>Risks</h3>
 <div>
     We foresee extremely minimal risks with this study. 
-    <br/> While harassment scenarios may include offensive languages, we design intricate study procedures to prevent any unnecessary exposure and harms. 
+    <br/> While harassment scenarios may include offensive languages, we design intricate study procedures to prevent any unnecessary exposure and harm. 
 <div>
 
 <h3>Protecting Your Information</h3>
@@ -62,7 +62,7 @@ h1 {color: #4b2e83;}
 </div>
 
 <h3>Compensation</h3>
-<div>If selected participants are willing to share their email address and name, they will receive a $20 Amazon gift card.</div>
+<div> You will receive a $20 Amazon gift card as compensation for your time.</div>
 
 <h3>Questions and contact</h3>
 If you have questions about this research study, please free feel to contact Leijie Wang: <i>leijiew@cs.washington.edu</i>.
@@ -88,7 +88,7 @@ If you have questions about this research study, please free feel to contact Lei
 </head>
 <body>
 
-<a href="https://docs.google.com/forms/d/1-pD_CObgUOWsipOtVodwVWMCjCewKUWPUgLFqg5lF5E/viewform?edit_requested=true#settings" class="button">Start the Recruitment Survey</a>
+<a href="https://forms.gle/HYLy1zmYC3WMcCuL6" class="button">Start the Recruitment Survey</a>
 
 </body>
 </html>
